@@ -20,7 +20,7 @@
          name="glob-test"
          default="antunit">
 
-  <import file="../antunit-base.xml" />
+  <import file="../../antunit-base.xml" />
 
   <target name="setUp">
     <mkdir dir="${input}"/>
