@@ -1,0 +1,36 @@
+<?xml version="1.0"?>
+<!--
+  Licensed to the Apache Software Foundation (ASF) under one or more
+  contributor license agreements.  See the NOTICE file distributed with
+  this work for additional information regarding copyright ownership.
+  The ASF licenses this file to You under the Apache License, Version 2.0
+  (the "License"); you may not use this file except in compliance with
+  the License.  You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+-->
+<project xmlns:au="antlib:org.apache.ant.antunit"
+         default="antunit">
+
+  <import file="../../antunit-base.xml" />
+
+  <target name="testHandleDirSep"
+          description="https://issues.apache.org/bugzilla/show_bug.cgi?id=51086">
+    <pathconvert property="p1">
+      <string>foo/bar</string>
+      <packagemapper from="*" to="*" handledirsep="true"/>
+    </pathconvert>
+    <au:assertPropertyEquals name="p1" value="foo.bar"/>
+    <pathconvert property="p2">
+      <string>foo\bar</string>
+      <packagemapper from="*" to="*" handledirsep="true"/>
+    </pathconvert>
+    <au:assertPropertyEquals name="p1" value="foo.bar"/>
+  </target>
+</project>
